force-app/main/default/objects/Sub_Task__c/Sub_Task__c.object-meta.xml
<CustomObject>
    <label>Sub Task</label>
    <nameField>
        <label>Sub Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>