force-app/main/default/objects/Sub_Task__c/fields/completion_percentage__c.field-meta.xml
<CustomField>
    <fullName>completion_percentage__c</fullName>
    <formula>IF(
    Total_checklists__c = 0,
    0,
    Total_Checklists_Completed__c/Total_checklists__c
)</formula>
    <label>Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>