force-app/main/default/objects/Sub_Task__c/fields/Playbook__c.field-meta.xml
<CustomField>
    <fullName>Playbook__c</fullName>
    <label>Playbook</label>
    <referenceTo>Playbook__c</referenceTo>
    <relationshipLabel>Sub Tasks</relationshipLabel>
    <relationshipName>Sub_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>