force-app/main/default/objects/Sub_Task__c/fields/Total_checklists__c.field-meta.xml
<CustomField>
    <fullName>Total_checklists__c</fullName>
    <label>Total Checklists</label>
    <summaryForeignKey>Checklist__c.Sub_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>