force-app/main/default/objects/Sub_Task__c/fields/Total_Checklists_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Checklists_Completed__c</fullName>
    <label>Total Checklists Completed</label>
    <summaryFilterItems>
        <field>Checklist__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist__c.Sub_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>